tests/NormalTests/paczka1/small_fuzzy/66955824.err
Error in line 5: A838 A838 8r,4
Error in line 8: A838 A838 -2,3
Error in line 4: tL1KK4fB A838 45,8
